# POCDjangoDeploy

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: pipeline.yaml
api/api/: settings.py  urls.py
api/books/: admin.py  models.py  serializers.py  urls.py  views.py
api/books/migrations/: 0001_initial.py
api/books/test/: tests.py
