[tool.poetry]
name = "pocdjangodeploy"
version = "0.1.0"
description = "POC Django Deploy on AWS."
authors = ["alfmorais <alfredneto@hotmail.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
coreapi = "*"
Django = "^4.1.2"
django-jazzmin = "*"
django-model-utils = "*"
djangorestframework = "^3.14.0"
factory_boy = "*"
pre-commit = "^2.20.0"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-django = "4.5.2"
pytest-factoryboy = "*"
python = "^3.8"
PyYAML = "*"
safety = "2.3.5"
virtualenv = "20.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
